--- a/config copy.json
+++ b/config copy.json
@@ -1,8 +1,8 @@
 {
     "db": {
-        "host": "cluster0-ptuut.mongodb.net",
-        "dbname": "videoteka",
-        "username": "stefan_gg",
-        "password": "furious7"
+        "host": "",
+        "dbname": "",
+        "username": "",
+        "password": ""
     }
 }
