--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "mongoose": "^5.7.8"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4",
-    "node-input-validator": "^4.1.0"
+    "node-input-validator": "^4.1.0",
+    "nodemon": "^1.19.4"
   }
 }
