--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.8"
+    "mongoose": "^5.7.8",
+    "nodemon": "^2.0.1"
   },
   "devDependencies": {
-    "node-input-validator": "^4.1.0",
-    "nodemon": "^1.19.4"
+    "node-input-validator": "^4.1.0"
   }
 }
