--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.8",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "randomstring": "^1.1.5"
   },
   "devDependencies": {
     "node-input-validator": "^4.1.0"
