confirm with sendgrid

--- a/config copy.json
+++ b/config copy.json
@@ -5,6 +5,9 @@
         "username": "",
         "password": ""
     },
+    "mailer": {
+        "key": ""
+    },
     "jwt": {
         "key": ""
     }
